[gd_scene load_steps=8 format=3 uid="uid://cw3yja5awo834"]

[ext_resource type="Texture2D" uid="uid://buhuxpt3ctnj6" path="res://assets/sprites/menuPanel2.png" id="1_o8uve"]
[ext_resource type="Script" uid="uid://bvu7acluposw" path="res://scripts/shopPanel.gd" id="2_ij75g"]
[ext_resource type="LabelSettings" uid="uid://brx2w180ye8rk" path="res://assets/themes/cyberLabel3.tres" id="3_o8uve"]
[ext_resource type="Theme" uid="uid://dasaqfnt8xhfc" path="res://assets/themes/shopButtons.tres" id="4_g4fi2"]
[ext_resource type="Texture2D" uid="uid://cub7gv0wraulj" path="res://assets/sprites/bytes.png" id="5_dqify"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tccfi"]
texture = ExtResource("1_o8uve")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0

[sub_resource type="Theme" id="Theme_e2hv5"]
Panel/styles/panel = SubResource("StyleBoxTexture_tccfi")

[node name="shopPanel" type="Panel"]
offset_right = 386.0
offset_bottom = 511.0
theme = SubResource("Theme_e2hv5")
script = ExtResource("2_ij75g")

[node name="weaponsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_top = 8.0
offset_right = 56.0
offset_bottom = 32.0
grow_horizontal = 2
text = "Weapons"
label_settings = ExtResource("3_o8uve")

[node name="sword" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 40.0
offset_right = 90.0
offset_bottom = 75.0
grow_horizontal = 2
tooltip_text = "A quick but low damage weapon best used in combination with code attacks."
theme = ExtResource("4_g4fi2")
text = "10  Sword"
icon = ExtResource("5_dqify")

[node name="greatSword" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.0
offset_top = 99.0
offset_right = 138.0
offset_bottom = 135.0
grow_horizontal = 2
tooltip_text = "A large weapon with devastating results which can attack both in front of and behind the player. It is surprisingly fast."
theme = ExtResource("4_g4fi2")
text = "25  Great Sword"
icon = ExtResource("5_dqify")

[node name="bow" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_top = 159.0
offset_right = 74.0
offset_bottom = 195.0
grow_horizontal = 2
tooltip_text = "Ranged weapon which can use special arrows for code attacks."
theme = ExtResource("4_g4fi2")
text = "15  Bow"
icon = ExtResource("5_dqify")

[node name="codeSpellsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -88.0
offset_top = 227.0
offset_right = 88.0
offset_bottom = 251.0
grow_horizontal = 2
text = "Code Spells"
label_settings = ExtResource("3_o8uve")

[node name="byteShot" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -122.0
offset_top = 259.0
offset_right = 122.0
offset_bottom = 294.0
grow_horizontal = 2
tooltip_text = "A ranged code attack with a short cooldown."
theme = ExtResource("4_g4fi2")
text = "10  Byte Shot"
icon = ExtResource("5_dqify")

[node name="firewallWave" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -154.0
offset_top = 318.0
offset_right = 154.0
offset_bottom = 354.0
grow_horizontal = 2
tooltip_text = "Sends out a wave of fire towards enemies."
theme = ExtResource("4_g4fi2")
text = "30  Firewall Wave"
icon = ExtResource("5_dqify")

[node name="patch" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.0
offset_top = 378.0
offset_right = 82.0
offset_bottom = 414.0
grow_horizontal = 2
tooltip_text = "A healing spell."
theme = ExtResource("4_g4fi2")
text = "15 Patch"
icon = ExtResource("5_dqify")

[connection signal="pressed" from="sword" to="." method="_on_sword_pressed"]
[connection signal="pressed" from="greatSword" to="." method="_on_great_sword_pressed"]
[connection signal="pressed" from="bow" to="." method="_on_bow_pressed"]
[connection signal="pressed" from="byteShot" to="." method="_on_byte_shot_pressed"]
[connection signal="pressed" from="firewallWave" to="." method="_on_firewall_wave_pressed"]
[connection signal="pressed" from="patch" to="." method="_on_patch_pressed"]
